--- a/analytics-dashboard.html
+++ b/analytics-dashboard.html
@@ -57,7 +57,7 @@
           events = [
             { timestamp: new Date().toLocaleString(), event: 'dashboard_view', details: 'User: vendor' },
             { timestamp: new Date().toLocaleString(), event: 'order_placed', details: 'Amount: ₹500, Items: 3' },
-            { timestamp: new Date().toLocaleString(), event: 'profile_update', details: 'Name: John Doe' }
+            { timestamp: new Date().toLocaleString(), event: 'profile_update', details: 'Name: User Name' }
           ];
         }
         return events;
