--- a/payment.html
+++ b/payment.html
@@ -86,7 +86,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label for="cardName">Cardholder Name</label>
-                                        <input type="text" id="cardName" placeholder="John Doe">
+                                        <input type="text" id="cardName" placeholder="User Name">
                                     </div>
                                 </div>
                                 <div class="form-row">
